fixed slightly bigger 'Searchbar' component input field when in dark mode

--- a/src/components/Searchbar.css
+++ b/src/components/Searchbar.css
@@ -8,6 +8,7 @@
 .searchbar input, textarea {
     background-color: #e3e3e3;
     color: #333;
+    border: #e3e3e3;
 }
 .searchbar.dark input, textarea {
     background-color: #333;
